--- a/Ticari_Otomasyon/Ticari_Otomasyon.csproj
+++ b/Ticari_Otomasyon/Ticari_Otomasyon.csproj
@@ -91,6 +91,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DbModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="FirmaHareketler_Result.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="FrmAnaModul.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +135,12 @@
     </Compile>
     <Compile Include="FrmGiderler.Designer.cs">
       <DependentUpon>FrmGiderler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmHareketler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmHareketler.Designer.cs">
+      <DependentUpon>FrmHareketler.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmMail.cs">
       <SubType>Form</SubType>
@@ -175,6 +184,9 @@
     <Compile Include="FrmUrunler.Designer.cs">
       <DependentUpon>FrmUrunler.cs</DependentUpon>
     </Compile>
+    <Compile Include="MusteriHareketler_Result.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TBL_BANKALAR.cs">
@@ -184,6 +196,9 @@
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TBL_FATURADETAY.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TBL_FIRMAHAREKETLER.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TBL_FIRMALAR.cs">
@@ -199,6 +214,9 @@
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TBL_KODLAR.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TBL_MUSTERIHAREKETLER.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TBL_MUSTERILER.cs">
@@ -236,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGiderler.resx">
       <DependentUpon>FrmGiderler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmHareketler.resx">
+      <DependentUpon>FrmHareketler.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMail.resx">
       <DependentUpon>FrmMail.cs</DependentUpon>
